# aws-ddns

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
create_user/: Cargo.toml
create_user/src/: main.rs
ddns_core/: Cargo.toml
ddns_core/src/: client.rs  error.rs  lib.rs
nic/: Cargo.toml
nic/src/: main.rs
requests/: create_user.json
