[package]
name = "create_user"
version = "0.1.0"
authors = ["Will Dixon <will@acst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "0.8.2"
http = "0.2.1"

[dependencies.rusoto_core]
version = "0.45.0"
default-features = false
features = ["rustls", "encoding"]

[dependencies.rusoto_dynamodb]
version = "0.45.0"
default-features = false
features = ["rustls", "serialize_structs", "deserialize_structs"]

[dependencies.tokio]
version = "0.2.22"
features = ["macros"]

[dependencies.lambda_http]
git = "https://github.com/awslabs/aws-lambda-rust-runtime"
branch = "master"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.ddns_core]
path = "../ddns_core"
