[package]
name = "ddns_core"
version = "0.1.0"
authors = ["Will Dixon <will@acst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
base64 = "0.12.3"
serde_json = "1.0.57"

[dependencies.lambda_http]
git = "https://github.com/awslabs/aws-lambda-rust-runtime"
branch = "master"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]
