[package]
name = "ddns_core"
version = "0.1.0"
authors = ["Will Dixon <will@acst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
base64 = "0.12.3"
serde_json = "1.0.57"
rand = "0.7.3"
rand_chacha = "0.2.2"

[dependencies.lambda_http]
git = "https://github.com/awslabs/aws-lambda-rust-runtime"
branch = "master"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dependencies.rusoto_core]
version = "0.45.0"
default-features = false
features = ["rustls", "encoding"]

[dependencies.rusoto_dynamodb]
version = "0.45.0"
default-features = false
features = ["rustls", "serialize_structs", "deserialize_structs"]

[dependencies.rust-argon2]
version = "0.8.2"
default-features = false
