[package]
name = "nic"
version = "0.1.0"
authors = ["Will Dixon <will@acst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.1.1"
rust-argon2 = "0.8.2"
lambda_runtime = "0.2.1"
http = "0.1.21"

[dependencies.rusoto_core]
version = "0.45.0"
default-features = false
features = ["rustls", "encoding"]

[dependencies.rusoto_dynamodb]
version = "0.45.0"
default-features = false
features = ["rustls"]

[dependencies.rusoto_route53]
version = "0.45.0"
default-features = false
features = ["rustls"]

[dependencies.tokio]
version = "0.2.22"
features = ["macros"]

